packages/system/scratch-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-path-provisioner-scratch
  namespace: storage-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-path-provisioner-scratch
  template:
    metadata:
      labels:
        app: local-path-provisioner-scratch
    spec:
      serviceAccountName: local-path-provisioner-scratch
      containers:
        - name: local-path-provisioner-scratch
          image: rancher/local-path-provisioner:v0.0.30
          imagePullPolicy: IfNotPresent
          command:
            - local-path-provisioner
            - --debug
            - start
            - --config
            - /etc/config/config.json
            - --service-account-name
            - local-path-provisioner-scratch
            - --provisioner-name
            - cluster.local/scratch-path-provisioner
            - --helper-image
            - rancher/library-busybox:1.36.1
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config/
      volumes:
        - name: config-volume
          configMap:
            name: local-path-config-scratch
