packages/system/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale
  namespace: argocd
  annotations:
    # tell Tailscale to create a machine name "argocd"
    # tailscale.com/tags: "tag:k8s"
    # Enable HTTPS automatically
    tailscale.com/hostname: "argocd"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  tls:
    - hosts:
        - argocd
